fixed spacing and edited readme

--- a/src/components/CheckoutItems.css
+++ b/src/components/CheckoutItems.css
@@ -15,7 +15,3 @@
 .img {
   width: 20%;
 }
-
-.amount-number {
-  margin: 0 2px;
-}
